# opti-diagnose

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/optidiagnose/: manage.py
backend/optidiagnose/optidiagnose/: asgi.py  settings.py  urls.py  wsgi.py
backend/optidiagnose/optidiagnoseapi/: apps.py  models.py  serializers.py  urls.py  views.py
backend/optidiagnose/optidiagnoseapi/migrations/: 0001_initial.py  0002_alter_scan_photo.py  0003_remove_networkdiagnosis_examination_and_more.py
backend/optidiagnose/optidiagnoseapi/tests/: test_network_diagnosis.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/components/examinations/: Examination.jsx  ExaminationNew.jsx  Examinations.jsx  ExaminationsNew.jsx
frontend/src/components/home/: Home.jsx
frontend/src/components/login/: Login.jsx
frontend/src/components/navbar/: Navbar.jsx
frontend/src/components/patients/: PatientEdit.jsx  PatientNew.jsx  Patients.jsx
frontend/src/components/ui/: file-button.jsx  toaster.jsx
frontend/src/context/: AuthContext.jsx
models/: README.md  config.properties  pyproject.toml
models/mobilenetv3_large/: handler.py  model.py  requirements.txt
models/vgg/: handler.py  model.py
models/vgg16/: README.md  handler.py  model.py
models/vit/: handler.py  model.py
