[project]
name = "opti-diagnose-backend"
version = "0.1.0"
description = "Backend app for the opti-diagnose project"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.5.0",
    "django-environ>=0.11.2",
    "django-rest-framework>=0.1.0",
    "django>=5.1.2",
    "djangorestframework-simplejwt>=5.3.1",
    "psycopg[binary]>=3.2.3",
]

[tool.ruff]
line-length = 120